<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ForgetNot!</string>
    <string name="no_tasks">No tasks :)</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert">Insert</string>
    <string name="enter_todo">ForgetNot to:</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_label">Edit Item</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_string">Delete</string>
    <string name="delete_all_string">Delete All</string>
    <string name="change_priority">Change priority</string>
    <string name="priority">High priority</string>
    <string name="high_priority">High</string>
    <string name="low_priority">Low</string>
    <string name="mark_completed">Mark completed</string>
    <string name="dateLabel">Date</string>
    <string name="set_date">Set date</string>
    <string name="success">\o/</string>
        

</resources>
