<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.todopersist.ToDoActivity" >
        
    <TextView
        android:id="@+id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newTask"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_tasks"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/lvTasksList"
        android:layout_width="fill_parent"
        android:layout_height="370dp"
        android:layout_alignLeft="@+id/newTask"
        android:layout_alignRight="@+id/btnAddNewTask"
        android:layout_alignTop="@+id/empty"
		android:layout_below="@+id/newTask"
        android:layout_marginTop="20dp"
        android:background="#c3c3c3" >

    </ListView>

    <EditText
        android:id="@+id/newTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/enter_todo" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAddNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newTask"
        android:layout_alignBottom="@+id/newTask"
        android:layout_toRightOf="@+id/newTask"
        android:onClick="addTodoItem"
        android:text="@string/add_button" />

</RelativeLayout>
